--- a/css/styles.css
+++ b/css/styles.css
@@ -66,11 +66,12 @@ img {
 }
 
 .search-container {
-  background-color: wheat;
+  background-color: #750505;
   padding: 15px;
-  width: 100%;
+  width: 70%;
   text-align: center;
   border-radius: 10px;
+  margin: 0 auto;
 }
 
 #search-input {
